--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,9 @@ root = true
 
 # Possible values - tab, space
 
-indent_style = space
+# заменил на таб так как мне так привычнее — ни что не должно мешать кодить, особенно джуну, а ведь я даже не он ;)
+
+indent_style = tab
 
 # Indentation size in single-spaced characters
 
